--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ theme: nexmoe
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/johninch/johninch.github.io.git #https://bitbucket.org/JohnSmith/johnsmith.bitbucket.io
+  repo: https://github.com/johninch/johninch.github.io #https://bitbucket.org/JohnSmith/johnsmith.bitbucket.io
   branch: master #published
   message: deploy
 
@@ -92,7 +92,7 @@ live2d:
   tagMode: false
   debug: false
   model:
-    use: live2d-widget-model-shizuku
+    use: live2d-widget-model-tororo
   display:
     position: right
     width: 200
@@ -101,15 +101,5 @@ live2d:
     show: true
   react:
     opacity: 0.7
-  dialog:
-    # 开启对话框
-    enable: true
-    script:
-      # 每空闲 10 秒钟，显示一条一言
-      every idle 10s: $hitokoto$
-      # 当触摸到星星图案
-      hover .star: 星星在天上而你在我心里 (*/ω＼*)
-      # 当触摸到角色身体
-      tap body: 哎呀！别碰我！
-      # 当触摸到角色头部
-      tap face: 人家已经不是小孩子了！
+    opacityDefault: 0.7
+    opacityOnHover: 0.2
