--- a/source/_data/melody.yml
+++ b/source/_data/melody.yml
@@ -92,7 +92,7 @@ katex:
 
 # Toggle fireworks (IE >= 10)
 # ---------------
-fireworks: false
+fireworks: true
 
 # Analysis
 # ---------------
@@ -136,7 +136,7 @@ cdn:
 # ---------------
 avatar: https://avatars3.githubusercontent.com/u/16729420?s=460&v=4
 
-top_img: true # false or url of img
+top_img: /images/WechatIMG80.jpeg # false or url of img
 
 post_meta:
   date_type: created # created or updated
